Add Document::setModified(bool) to the scripting api

BUG:425066